# BayStateScraper

./: .dockerignore  .env  .gitignore  AGENTS.md  CONTRIBUTING.md  DEV_SETUP.md  Dockerfile  GEMINI.md  README.md  daemon.py  debug_dump.html  docker-compose.yml  get.sh  install.py  install.sh  main.py  pytest.ini  requirements-ai.txt  requirements.txt  ruff.toml  run-dev.sh  run-prod.sh  run_job.py  run_local_job.sh  runner.py  scraper_sidecar.spec  session-ses_483e.md  setup_local_runner.sh  sidecar_bridge.py  start-runner.bat  start-runner.sh  test_browser_use_fix.py  test_cost_validation.py  test_fix_extraction.py  test_setup.py  test_supabase_connection.py  test_supabase_writes.py  verify_e2e.py
.github/: dependabot.yml
api/: debug_context.py  server.py
cli/: runner_setup.py
config/: settings.example.json
core/: AGENTS.md  adaptive_retry_strategy.py  anti_detection_manager.py  api_client.py  captcha_solver.py  concurrent_scraper.py  config_fetcher.py  events.py  failure_analytics.py  failure_classifier.py  field_mapping.py  models.py  realtime_manager.py  retry_executor.py  scheduler.py  scraper_cache.py  scraper_health_monitor.py  scraper_testing_client.py  scraper_testing_integration.py  settings_manager.py
data/: retry_history_amazon.json  retry_history_bradley.json  retry_history_central_pet.json
docs/: API_PROPOSAL.md  ARCHITECTURE.md  GOALS.md  LOG_SCHEMA.md  (+4 more)
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keychain.rs  main.rs  storage.rs
(+271 files in other folders)
