[package]
name = "baystate-scraper"
version = "1.0.0"
description = "Bay State Scraper Desktop Application"
authors = ["Bay State Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "baystate_scraper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-sidecar"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
