[package]
name = "baystate-scraper"
version = "1.0.0"
description = "Bay State Scraper Desktop Application"
authors = ["Bay State Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
keyring = "3"
directories = "5"
thiserror = "1"
whoami = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
